name:               n
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable n
  main-is:          Main.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.10
                  , pandoc >= 2
                  , data-default
  ghc-options:      -threaded
  default-language: Haskell2010
